--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -25,10 +25,11 @@
         }
       }
     </style>
+    
   </head>
   <body>
     <div>
-      <div class="col-sm-3 sidenav bg-info">
+      <div class="col-sm-4 sidenav bg-info">
         <center>
           <h3
             style="
@@ -43,11 +44,12 @@
         <form method="post" action="">
           {% csrf_token %}
           <div class="row">
-            <div class="col-sm-10">
+            <div class="col-sm-12">
               <h5 style="color: white">Date in</h5>
               <input type="date" class="form-control" />
             </div>
           </div>
+         
            <div
             class="row"
             style="
@@ -55,18 +57,46 @@
               padding-bottom: 5%;
             "
           >
-            <div class="col-sm-6">
+            <div class="col-sm-4">
               <h5 style="color: white">Time in</h5>
               <input type="time" class="form-control" />
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
               <h5 style="color: white">Time out</h5>
               <input type="time" class="form-control" />
             </div>
+           
+             <div class="col-sm-2">
+              <h5 style="color: white;padding-left:10%"> Add</h5>
+
+              <a href ="#">
+                <button
+                  style="font-size: 20px"
+                  class="btn btn-info add-last"
+                  type="button"
+                >
+                  <i class="glyphicon glyphicon-plus"></i>
+                </button></a>
+              </div>
+               <div class="col-sm-2">
+       <h5 style="color: white">Delete</h5>
+
+              <a href ="#">
+                <button
+                    style="font-size: 20px"
+                    class="btn btn-danger remove"
+                    type="button"
+                  >
+                    <i class="glyphicon glyphicon-remove"></i>
+                  </button></a>
+                </div>
           </div>
         
-          <div class="row">
-            <div class="col-sm-5">
+          <div class="row"   style="
+              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+              padding-bottom: 2%;
+            ">
+            <div class="col-sm-6">
               <h5 style="color: white">Days availiable in the week</h5>
               <select
                 name="sub"
@@ -80,7 +110,7 @@
               </select>
             </div>
 
-            <div class="col-sm-5">
+            <div class="col-sm-6">
               <h5 style="color: white">Number of hours per session</h5>
               <select
                 name="sub"
@@ -98,10 +128,35 @@
          
 
           <div class="row">
-            <div class="col-sm-10">
+            <div class="col-sm-8">
               <h5 style="color: white">Date not availiable (optional)</h5>
               <input type="date" class="form-control" />
             </div>
+               <div class="col-sm-2">
+              <h5 style="color: white;padding-left:10%"> Add</h5>
+
+              <a href ="#">
+                <button
+                  style="font-size: 20px"
+                  class="btn btn-info add-last"
+                  type="button"
+                >
+                  <i class="glyphicon glyphicon-plus"></i>
+                </button></a>
+              </div>
+               <div class="col-sm-2">
+       <h5 style="color: white">Delete</h5>
+
+              <a href ="#">
+                <button
+                    style="font-size: 20px"
+                    class="btn btn-danger remove"
+                    type="button"
+                  >
+                    <i class="glyphicon glyphicon-remove"></i>
+                  </button></a>
+                </div>
+
           </div>
           <br />
 
@@ -128,7 +183,7 @@
         </form>
         <br />
       </div>
-      <div class="col-lg-9">
+      <div class="col-lg-8">
         <div class="well bg-info">
           <h4 style="color: white">
             <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
@@ -138,8 +193,9 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="well">
-                <h4>Users</h4>
-                <p>1 Million</p>
+          
+                {% comment %} <h1>{{cal|safe}}<h1> {% endcomment %}
+                
               </div>
             </div>
             </div>
