--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -24,6 +24,23 @@
           height: auto;
         }
       }
+      .tbodycal{
+        padding:10px;
+        background:lightgrey
+      }
+      .tbodycal td{
+        padding:10px;
+        background:lightgrey;
+        border:1px solid whitesmoke;
+      }
+      td a{
+        text-decoration:none;
+        color:black;
+      }
+      .ttop{
+        padding:100px;
+      }
+
     </style>
     
   </head>
@@ -192,8 +209,70 @@
         <div>
           <div class="row">
             <div class="col-sm-12">
+              
               <div class="well">
-          
+          <div id="content-main">
+  <ul class="object-tools">
+    <li>
+      <a href="{{ previous_month }}"> Previous month </a>
+    </li>
+    <li>
+      <a href="{{ next_month }}"> Next month </a>
+    </li>
+  </ul>
+
+  {{ calendar }}
+</div>
+<table class="ui-datepicker-calendar">
+  <thead  class="ttop">
+    <tr><th scope="col">
+      <span title="Monday">M</span>
+    </th><th scope="col"><span title="Tuesday">T</span></th>
+    <th scope="col"><span title="Wednesday">W</span></th>
+    <th scope="col"><span title="Thursday">T</span></th>
+    <th scope="col"><span title="Friday">F</span></th>
+    <th><span title="Saturday">S</span></th>
+    <th><span title="Sunday">S</span></th>
+  </tr></thead><tbody class="tbodycal"><tr>
+    <td >&nbsp;</td>
+    <td ><a href="#">1</a></td>
+    <td ><a href="#">2</a></td>
+    <td ><a href="#">3</a></td>
+    <td ><a href="#">4</a></td>
+    <td ><a href="#">5</a></td>
+    <td ><a href="#">6</a></td>
+  </tr><tr><td ><a href="#">7</a></td>
+    <td ><a href="#">8</a></td
+      ><td ><a href="#">9</a></td>
+      <td ><a href="#">10</a></td>
+      <td ><a href="#">11</a></td>
+      <td ><a href="#">12</a></td>
+      <td ><a href="#">13</a></td>
+    </tr><tr><td ><a href="#">14</a></td>
+      <td ><a href="#">15</a></td>
+      <td ><a href="#">16</a></td>
+      <td ><a href="#">17</a></td>
+      <td ><a href="#">18</a></td>
+      <td ><a href="#">19</a></td>
+      <td ><a href="#">20</a></td>
+    </tr><tr><td ><a href="#">21</a></td>
+      <td ><a href="#">22</a></td>
+      <td ><a href="#">23</a></td>
+      <td ><a href="#">24</a></td>
+      <td ><a href="#">25</a></td>
+      <td ><a href="#">26</a></td>
+      <td ><a href="#">27</a></td></tr><tr>
+      <td ><a href="#">28</a></td>
+      <td ><a href="#">29</a></td>
+      <td ><a href="#">30</a></td>
+      <td ><a href="#">31</a></td>
+      <td >&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td></tr>
+</tbody>
+</table>
+
+
                 {% comment %} <h1>{{cal|safe}}<h1> {% endcomment %}
                 
               </div>
