--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -360,7 +360,7 @@
                   />
                   {% endcomment %}
                   <div class="input-group-btn">
-                 <a href ="{% url 'counsellingUrls:achievement_del' ach.id %}">
+                 <a href ="{% url 'counsellingUrls:achievement_add' ach.id %}">
 
                     <button
                       style="font-size: 20px"
