--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -744,7 +744,7 @@ button::focus{
 #profile {
     border-radius: 100px;
     width: 50%;
-    
+    display:block;
     box-shadow:
         0px 0px 10px rgb(190, 185, 185);
 
