--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -8,12 +8,13 @@
 }
 
 #section1 {
+    background: var(--blue);
+    border-left:10px solid var(--blue);
     padding-bottom: 22.7%;
     width: 15%;
     float: left;
     height: 100%;
     overflow: hidden;
-    border-right: 1px solid #f7faf2;
     {% comment %} background-color: #8F00FF; {% endcomment %}
 
 }
@@ -227,12 +228,7 @@ section {
 
 }
 
-#tabIcons {
-    height: 100%;
-    padding-top:30%;
 
-
-}
 
 
 
@@ -351,35 +347,81 @@ section {
 
 /*bubbles*/
 
+.navigation{
+    position : fixed;
+    top:150;
+    width: 15%;
+    height: 100%;
+    border-left: 10px solid var(--blue);
+    transition: 0.5s;
+    overflow: hidden;
+}
+
+.navigation ul{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+}
+
+.navigation ul li{
+    position: relative;
+    width: 200%;
+    list_style: none;
+}
+
+.navigation ul li a{
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    color: var(--white);
+    text-decoration: none;
+}
+
+
+#tabIcons  {
+    height: 100%;
+    padding-top:30%;
+
+
+}
+ #tabIcons a {
+position: relative;
+display: block;
+}
 
 
 
+#elementID  {
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
 
 
-
-#elementID {
-    opacity: 0.9;
     color: white;
     width: 100%;
-    padding-bottom: 10%;
-    padding-top: 10%;
+    padding-bottom: 8%;
+    padding-top: 8%;
     padding-left: 15%;
     overflow: hidden;
     transition: all 0.3s ease;
 }
 
-#elementID:hover {
+#elementID:hover  {
     color: blue;
+        background: var(--white);
+
     animation: mymove 5s infinite;
-
-
-
 
 }
 
+
+ 
+
 #elementID.active {
-    background-color: white;
-    border: 3px solid white;
+    background: var(--white);
+    
     
 
     width: 100%;
@@ -394,11 +436,10 @@ section {
 
 
 
-
 #elementID6 {
     opacity: 0.3;
     float: left;
-
+    
     width: 2%;
 
 
