--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -9,7 +9,6 @@
 
 #section1 {
     background: var(--blue);
-    border-left:10px solid var(--blue);
     padding-bottom: 22.7%;
     width: 15%;
     float: left;
@@ -347,38 +346,104 @@ section {
 
 /*bubbles*/
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+}
+
 .navigation{
     position : fixed;
-    top:150;
-    width: 15%;
+ border-left:10px solid var(--blue);
+
+    top:180;
+    width:15%;
     height: 100%;
-    border-left: 10px solid var(--blue);
     transition: 0.5s;
     overflow: hidden;
 }
 
 .navigation ul{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+  
+    
 }
 
 .navigation ul li{
-    position: relative;
-    width: 200%;
-    list_style: none;
+    position:relative;
+    width:100%;
+    list-style-type:none;
+   border-top-left-radius:30px;
+   border-bottom-left-radius:30px;
+   
+  
 }
 
-.navigation ul li a{
+.navigation ul li:hover
+{
+    background:var(--white);
+}
+
+.navigation ul li a {
+    position:relative;
+    display:block;
+    width:100%;
+    display:flex;
+    text-decoration: none;
+    color: var(--white);
+}
+
+.navigation ul li:hover a {
+    animation: mymove 5s infinite;
+}
+
+.navigation ul li a .icon{
+   
+    position: relative;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    min-width:60px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+   
+       
+
+}
+
+.navigation ul li a .icon ion-icon{
+    font-size: 1.50em;
+}
+
+.navigation ul li a .title{
     position: relative;
     display: block;
-    width: 100%;
-    display: flex;
-    color: var(--white);
-    text-decoration: none;
+    padding: 0 10px;
+    height:40px;
+    line-height: 50px;
+    text-align: start;
+    white-space: nowrap;
 }
+
+.navigation ul li:hover a::after 
+{
+    content: '';
+    position: absolute;
+    right: 0;
+    top: -30px;
+    width: 30px;
+    height: 30px;
+    background:red;
+    border-radius: 50%;
+    box-shadow: 15px 13px 0 -1px var(--green);
+    pointer-events: none;
+}
+
 
 
 #tabIcons  {
