--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -28,32 +28,32 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
     </div>
 
 
-<div class="container">
+
   <div class="navigation">
     <ul>
 <li>
-  <a href = "#">
+  <a  href="{% url 'counsellingUrls:superadminPage' pk %}">
     <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
     <span class="title">Admin</span>
     <a>
 </li>
 
 <li>
-  <a href = "#">
+  <a href="{% url 'counsellingUrls:adminPage' pk %}" >
     <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
     <span class="title">Dashboard</span>
     <a>
 </li>
 
 <li>
-  <a href = "#">
+  <a  href="{% url 'counsellingUrls:indexPage' pk %}" >
     <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
     <span class="title">Home</span>
     <a>
 </li>
 
 <li>
-  <a href = "#">
+  <a href="{% url 'counsellingUrls:notificationPage' pk %}">
     <span class="icon"><ion-icon name="chatbubble-ellipses-outline"></ion-icon>
 </span>
     <span class="title">Notifications</span>
@@ -61,14 +61,14 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
 </li>
 
 <li>
-  <a href = "#">
+  <a href="{% url 'counsellingUrls:profilePage' pk %}">
     <span class="icon"><ion-icon name="cloud-outline"></ion-icon></span>
     <span class="title">Profile</span>
     <a>
 </li>
 
 <li>
-  <a href = "#">
+  <a href="https://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=5.651967,-0.188441&spn=0.005466,0.010042&t=h&z=17&om=1&msid=114140572394999445956.000441bd2615d34504d68&mid=1333430664&showlabs=1">
     <span class="icon"><ion-icon name="navigate-outline"></ion-icon></span>
     <span class="title">UG MAP</span>
     <a>
@@ -78,7 +78,7 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
     </ul>
 
     </div>
-  </div>
+
 
 
 
@@ -284,8 +284,7 @@ include 'app/notification.html' %} {% include 'app/admin.html' %} {% include
           </p>
         </div>
          {% endcomment %}
-      </div>
-    </div>
+    
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
