--- a/counsellingApp/templates/app/super.html
+++ b/counsellingApp/templates/app/super.html
@@ -66,7 +66,7 @@
             <div class="card-box bg-green">
               <div class="inner">
                 <h3>{{bookings}}</h3>
-                <p>Total Students in the Department</p>
+                <p>Total Students</p>
               </div>
               <div class="icon">
                 <i class="fa fa-graduation-cap" aria-hidden="true"></i>
